--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
   }
   
   .navbar.scrolling-active {
-    background-color: #0050b3;
+    background-color: #808080;
     padding: 30px 0 30px 0;
   }
   
@@ -67,11 +67,11 @@
   }
   
   .navbar .box-navbar .menu .active a {
-    background-color: #0050b3;
+    background-color: #808080;
   }
   
   .navbar .box-navbar .menu li a:hover {
-    background-color: #0050b3;
+    background-color: #808080;
     transition: all 0.3s ease;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
@@ -119,7 +119,7 @@
   .hero .box-hero .box:nth-child(1) button {
     width: 180px;
     height: 50px;
-    background-color: #0050b3;
+    background-color: #808080;
     font-weight: bold;
     color: white;
     border: none;
@@ -224,7 +224,7 @@
     width: 120px;
     height: 40px;
     border: none;
-    background-color: #0050b3;
+    background-color: #808080;
     color: white;
     font-weight: bold;
     border-radius: 5px;
@@ -298,7 +298,7 @@
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     cursor: pointer;
-    background-color: #0050b3;
+    background-color #808080;
     color: white;
     padding-inline: 10px;
   }
@@ -311,7 +311,7 @@
   
   .footer {
     padding: 50px 0 50px 0;
-    background-color: #0050b3;
+    background-color: #808080;
   }
   
   .footer .box-footer {
@@ -387,7 +387,7 @@
       -moz-transition: all 0.3s ease;
       -ms-transition: all 0.3s ease;
       -o-transition: all 0.3s ease;
-      background-color: #0050b3;
+      background-color: #808080;
     }
   
     .navbar .box-navbar .menu.menu-active {
