--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@
   .services .box-services .box i {
     font-size: 40px;
     margin-bottom: 10px;
-    color: #0050b3;
+    color: #B0C4DE;
   }
   
   .services .box-services .box p {
@@ -224,7 +224,7 @@
     width: 120px;
     height: 40px;
     border: none;
-    background-color: #808080;
+    background-color: #B0C4DE;
     color: white;
     font-weight: bold;
     border-radius: 5px;
@@ -298,7 +298,7 @@
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     cursor: pointer;
-    background-color #808080;
+    background-color #B0C4DE;
     color: white;
     padding-inline: 10px;
   }
@@ -387,7 +387,7 @@
       -moz-transition: all 0.3s ease;
       -ms-transition: all 0.3s ease;
       -o-transition: all 0.3s ease;
-      background-color: #808080;
+      background-color: #B0C4DE;
     }
   
     .navbar .box-navbar .menu.menu-active {
