--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@
   .hero .box-hero .box:nth-child(1) button {
     width: 180px;
     height: 50px;
-    background-color: #808080;
+    background-color: #053e83;
     font-weight: bold;
     color: white;
     border: none;
@@ -224,7 +224,7 @@
     width: 120px;
     height: 40px;
     border: none;
-    background-color: #B0C4DE;
+    background-color: #053e83;
     color: white;
     font-weight: bold;
     border-radius: 5px;
@@ -298,7 +298,7 @@
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     cursor: pointer;
-    background-color #B0C4DE;
+    background-color #053e83;
     color: white;
     padding-inline: 10px;
   }
@@ -311,7 +311,7 @@
   
   .footer {
     padding: 50px 0 50px 0;
-    background-color: #808080;
+    background-color: #053e83;
   }
   
   .footer .box-footer {
