--- a/style.css
+++ b/style.css
@@ -387,7 +387,7 @@
       -moz-transition: all 0.3s ease;
       -ms-transition: all 0.3s ease;
       -o-transition: all 0.3s ease;
-      background-color: #B0C4DE;
+      background-color: #053e83;
     }
   
     .navbar .box-navbar .menu.menu-active {
